--- a/environment.yaml
+++ b/environment.yaml
@@ -4,8 +4,10 @@ channels:
   - defaults
 dependencies:
   - git==2.30.2
-  - pip==20.3.3
+  - pip==23.0
+  - bs4==4.10.0
   - pip:
       - flask==2.2.2
       - PyPDF2
       - pre-commit==2.15.0
+      - chatgpt_lite
